--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -189,8 +189,8 @@ td, th {
 
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('font/bootstrap/glyphicons-halflings-regular.eot');
-  src: url('font/bootstrap/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('font/bootstrap/glyphicons-halflings-regular.woff2') format('woff2'), url('font/bootstrap/glyphicons-halflings-regular.woff') format('woff'), url('font/bootstrap/glyphicons-halflings-regular.ttf') format('truetype'), url('font/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg'); }
+  src: url('../fonts/glyphicons-halflings-regular.eot');
+  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg'); }
 
 .glyphicon {
   position: relative;
@@ -4904,8 +4904,16 @@ button.close {
     display: none !important; } }
 
 @font-face {
-  font-family: SourceSansProRegular;
-  src: url("fonts/SourceSansPro-Regular.otf"); }
+  font-family: SourceSansPro-Regular;
+  src: url("../fonts/SourceSansPro-Regular.otf"); }
+
+@font-face {
+  font-family: SourceSansPro-Bold;
+  src: url("../fonts/SourceSansPro-Bold.otf"); }
+
+@font-face {
+  font-family: SourceSansPro-Semibold;
+  src: url("../fonts/SourceSansPro-Semibold.otf"); }
 
 #header {
   margin-top: 30px; }
@@ -4920,6 +4928,9 @@ button.close {
   display: block;
   max-width: 100%;
   height: auto; }
+
+.no-padding {
+  padding: 0; }
 
 .circle {
   border-radius: 50%;
@@ -4946,15 +4957,18 @@ button.close {
 
 .navbar-default {
   margin-left: -50px;
-  margin-top: -5px;
-  width: 872px;
-  height: 60px;
-  background-color: #e8e8e8; }
+  margin-top: -4px;
+  width: 854px;
+  height: 72px;
+  background-color: #e8e8e8;
+  border-radius: 0; }
   .navbar-default li {
     margin-left: 60px;
-    margin-top: 5px; }
+    margin-top: 10px;
+    font-family: SourceSansPro-Regular;
+    font-size: 16px; }
   .navbar-default a {
-    margin-left: 25px; }
+    margin-left: 23px; }
 
 .navbar-default .navbar-nav > li > a {
   color: black; }
@@ -4963,30 +4977,33 @@ button.close {
   margin-right: 20px;
   margin-top: -30px;
   padding-top: 10px;
-  font-size: 20px;
+  font-size: 24px;
   margin-left: -15px;
   border-bottom-width: 0;
-  height: 60px; }
+  width: 434px; }
   .tabs li {
     margin-bottom: 20px;
     font-family: SourceSansPro-Regular;
     background-color: #ededed;
     margin-top: 0;
-    width: 410px;
-    margin-left: -1px;
-    box-shadow: 0 5px 0 #c6c2c2; }
+    box-shadow: 0 5px 0 #CAC6C6; }
   .tabs a {
-    outline: none; }
+    outline: none;
+    height: 75.21px;
+    margin-left: 80px; }
+  .tabs span {
+    position: relative;
+    top: 11px;
+    margin-left: 20px; }
   .tabs .active {
-    background-color: #cccccc;
-    margin-left: -1px; }
+    background-color: #cccccc; }
 
 .tab {
   margin-right: 20px;
   margin-top: -20px;
   width: 275px;
   font-size: 20px;
-  margin-left: -15px;
+  margin-left: -14px;
   border-bottom-width: 0; }
   .tab li {
     margin-bottom: 20px;
@@ -4998,14 +5015,18 @@ button.close {
 .procedure {
   margin-left: 15px; }
   .procedure .border {
-    border-right: 2px solid #e5e5e5; }
+    border-right: 2px solid #e5e5e5;
+    padding-left: 35px;
+    margin-left: -5px; }
   .procedure .borders {
     border-right: 2px solid #e5e5e5;
-    margin-top: -20px; }
+    margin-top: -20px;
+    padding-left: 35px;
+    margin-left: -5px; }
   .procedure img {
-    width: 872px;
-    height: 400px;
-    margin-left: -29px;
+    width: 854px;
+    height: 446px;
+    margin-left: -30px;
     margin-top: -20px; }
 
 p {
@@ -5013,16 +5034,19 @@ p {
   margin-bottom: 40px;
   margin-left: -20px;
   text-align: justify;
-  font-size: 14px; }
+  font-size: 16px;
+  font-family: SourceSansPro-Regular; }
 
 #providers, #doctors, #procedures, #speciality {
   margin-left: -60px;
   padding-top: 20px;
   margin-top: 10px;
   border-top: 2px solid #e5e5e5;
-  width: 882px; }
+  width: 863px; }
   #providers span, #doctors span, #procedures span, #speciality span {
-    margin-left: 100px; }
+    margin-left: 110px;
+    font-family: SourceSansPro-Semibold;
+    font-size: 18px; }
 
 #bio {
   font-size: 16px;
@@ -5034,17 +5058,21 @@ p {
   margin-top: 20px;
   margin-bottom: 40px; }
   .procedure-box h3 {
-    margin-left: -40px;
+    margin-left: 0px;
     font-size: 16px;
     background-color: #e5e5e5;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     text-align: left;
-    padding-left: 10px; }
+    padding-left: 10px;
+    font-family: SourceSansPro-Bold;
+    width: 312px;
+    height: 52px; }
   .procedure-box img {
-    height: 180px;
-    width: 250px;
-    margin-top: 20px; }
+    height: 156px;
+    width: 208px;
+    margin-top: 20px;
+    margin-left: -20px; }
   .procedure-box a {
     outline: none;
     text-decoration: none; }
@@ -5056,22 +5084,32 @@ p {
   width: 843px;
   border-bottom-width: 0; }
   .proc img {
-    width: 120px;
-    height: 120px;
+    width: 104px;
+    height: 104px;
     border-radius: 50%;
     margin-top: -10px; }
 
 .procedure-doc {
   margin-top: 10px; }
+  .procedure-doc h4 {
+    margin-left: -120px;
+    margin-top: -10px;
+    font-family: SourceSansPro-Regular; }
   .procedure-doc p {
     padding-left: 8px;
-    margin-left: -90px; }
+    margin-left: -130px;
+    font-family: SourceSansPro-Regular;
+    margin-top: -20px; }
+
+.scrolls {
+  margin-top: 4px;
+  margin-left: 20px; }
 
 #text {
-  width: 75px;
+  width: 105px;
   border-color: #89d8c4;
-  margin-top: 20px;
-  margin-left: -80px;
+  margin-top: 50px;
+  margin-left: -100px;
   color: #89d8c4; }
 
 .doc {
@@ -5107,34 +5145,37 @@ p {
     margin-bottom: 20px; }
 
 .name h3 {
-  background-color: #e5e5e5;
+  background-color: #EDEDED;
   font-size: 18px;
-  width: 415px;
+  width: 434px;
   height: 70px;
   padding-top: 25px;
   font-weight: bold;
+  margin-left: -15px;
   padding-left: 10px;
-  margin-left: -16px;
-  margin-top: -20px; }
+  margin-top: -20px;
+  font-family: SourceSansPro-Regular; }
 
 .form {
-  background-color: #e5e5e5;
-  width: 415px;
+  background-color: #EDEDED;
+  width: 434px;
   height: 600px;
   margin-left: -15px;
   margin-top: -30px; }
   .form .nm {
     padding-top: 30px; }
   .form .form-control {
-    width: 350px;
-    height: 45px;
+    width: 365px;
+    height: 50px;
     margin-top: 15px;
     margin-left: 30px;
     border-radius: 8px; }
   .form .textarea {
-    width: 350px;
+    width: 365px;
     margin-top: 15px;
-    margin-left: 30px; }
+    margin-left: 30px;
+    border-radius: 8px;
+    border: 1px solid #ccc; }
   .form .dropdown {
     margin-left: 20px;
     width: 100px;
@@ -5149,6 +5190,12 @@ p {
     border-radius: 6px;
     margin-top: 30px;
     border-color: #ff6c6f; }
+
+.connect {
+  border: 2px solid #D55F61;
+  border-radius: 5px;
+  margin-bottom: 0;
+  margin-top: 9px; }
 
 .post_img {
   height: auto;
@@ -5213,7 +5260,7 @@ a:focus {
   padding-top: 20px;
   margin-top: 15px;
   border-top: 2px solid #e5e5e5;
-  width: 882px; }
+  width: 863px; }
   #education span, #awards span, #reviews span {
     margin-left: 100px; }
 
@@ -5222,16 +5269,29 @@ a:focus {
   background-color: #ff6c6f;
   border-color: #ff6c6f;
   margin-left: -40px;
-  margin-top: 90px; }
+  margin-top: 60px; }
 
 .btn-primary.raised.active {
   box-shadow: none;
   margin-bottom: -3px;
   margin-top: 3px; }
 
+.panel-body span {
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+  font-size: 14px; }
+
+.thumbnail {
+  height: 300px; }
+
+.thumbnail:hover {
+  position: absolute;
+  height: 330px; }
+
 .autocomplete-suggestions {
   border: 1px solid #999;
-  background: #FFF;
+  background: #fff;
   overflow: auto; }
 
 .autocomplete-suggestion {
@@ -5240,11 +5300,11 @@ a:focus {
   overflow: hidden; }
 
 .autocomplete-selected {
-  background: #F0F0F0; }
+  background: #f0f0f0; }
 
 .autocomplete-suggestions strong {
   font-weight: normal;
-  color: #3399FF; }
+  color: #39f; }
 
 .autocomplete-group {
   padding: 2px 5px; }
