--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -1,14 +1,20 @@
 // Bootstrap
 // =========
 // Bootstrap can be removed entirely by deleting this line.
-$icon-font-path: "font/bootstrap/";
+$icon-font-path: "../fonts/";
 @import "bootstrap/bootstrap";
 @font-face {
-				font-family: SourceSansProRegular;
-				src: url("fonts/SourceSansPro-Regular.otf");
-
+				font-family: SourceSansPro-Regular;
+				src: url("../fonts/SourceSansPro-Regular.otf");
 }
-
+@font-face {
+				font-family: SourceSansPro-Bold;
+				src: url("../fonts/SourceSansPro-Bold.otf");
+}
+@font-face {
+				font-family: SourceSansPro-Semibold;
+				src: url("../fonts/SourceSansPro-Semibold.otf");
+}
 // The easiest way to customise Bootstrap variables while
 // being able to easily override the source files with new
 // versions is to override the ones you want in another file.
@@ -21,6 +27,9 @@ $icon-font-path: "font/bootstrap/";
 // ===========
 // Add your own site style includes here
 @import "site/layout";
+.no-padding {
+				padding: 0;
+}
 .circle {
 
 				// background-repeat: no-repeat;
@@ -28,7 +37,6 @@ $icon-font-path: "font/bootstrap/";
 				width: 120px;
 				height: 120px;
 }
-
 .provider-box {
 				border: 1px solid black;
 				width: 830px;
@@ -48,30 +56,22 @@ $icon-font-path: "font/bootstrap/";
 				overflow-x: hidden;
 }
 
-// .pills {
-//   margin-left: -48px;
-//   li{
-//     margin-right: 20px;
-//     margin-top: 15px;
-//     width:250px;
-//     height:50px;
-//     padding-top:10px;
-//     font-size:18px;
-//
-//   }
-// }
+
 .navbar-default {
 				margin-left: -50px;
-				margin-top: -5px;
-				width: 872px;
-				height: 60px;
+				margin-top: -4px;
+				width: 854px;
+				height: 72px;
 				background-color: rgb(232,232,232);
+				border-radius: 0;
 				li {
 								margin-left: 60px;
-								margin-top: 5px;
+								margin-top: 10px;
+								font-family: SourceSansPro-Regular;
+								font-size: 16px;
 				}
 				a {
-								margin-left: 25px;
+								margin-left: 23px;
 				}
 }
 .navbar-default .navbar-nav > li > a {
@@ -81,31 +81,37 @@ $icon-font-path: "font/bootstrap/";
 				margin-right: 20px;
 				margin-top: -30px;
 				padding-top: 10px;
-				font-size: 20px;
+				font-size: 24px;
 				margin-left: -15px;
 				border-bottom-width: 0;
-				height: 60px;
+        // height: 75.21px;
+				// height: 73.66px;
+				// height:75.2px
+				width: 434px;
 				li {
 								margin-bottom: 20px;
 								font-family: SourceSansPro-Regular;
-
-								// border:1px solid #e5e5e5;
 								background-color: rgb(237,237,237);
 
 								// height:60px;
 								margin-top: 0;
-								width: 410px;
-								margin-left: -1px;
-								box-shadow: 0 5px 0 rgb(198,194,194);
+
+								// margin-left: -1px;
+								box-shadow: 0 5px 0 #CAC6C6;
 				}
 				a {
 								outline: none;
+								height: 75.21px;
+								margin-left:80px;
 				}
-
+				span{
+					position:relative;
+					top:11px;
+					margin-left: 20px;
+				}
 				.active {
 								background-color: rgb(204,204,204);
-								margin-left: -1px;
-				}
+            }
 }
 .tab {
 				margin-right: 20px;
@@ -115,7 +121,7 @@ $icon-font-path: "font/bootstrap/";
 				// height:20px;
 				// padding-top:-60px;
 				font-size: 20px;
-				margin-left: -15px;
+				margin-left: -14px;
 				border-bottom-width: 0;
 				li {
 								margin-bottom: 20px;
@@ -129,15 +135,21 @@ $icon-font-path: "font/bootstrap/";
 				margin-left: 15px;
 				.border {
 								border-right: 2px solid #e5e5e5;
+								padding-left: 35px;
+								margin-left: -5px;
 				}
 				.borders {
 								border-right: 2px solid #e5e5e5;
 								margin-top: -20px;
+								padding-left: 35px;
+								margin-left: -5px;
 				}
 				img {
-								width: 872px;
-								height: 400px;
-								margin-left: -29px;
+								width: 854px;
+
+								// height: 451px;
+								height: 446px;
+								margin-left: -30px;
 								margin-top: -20px;
 				}
 }
@@ -146,9 +158,8 @@ p {
 				margin-bottom: 40px;
 				margin-left: -20px;
 				text-align: justify;
-				font-size: 14px;
-				// font-family:SourceSansPro-Bold
-
+				font-size: 16px;
+				font-family: SourceSansPro-Regular;
 }
 #providers,
 #doctors,
@@ -158,9 +169,11 @@ p {
 				padding-top: 20px;
 				margin-top: 10px;
 				border-top: 2px solid #e5e5e5;
-				width: 882px;
+				width: 863px;
 				span {
-								margin-left: 100px;
+								margin-left: 110px;
+						 	font-family: SourceSansPro-Semibold;
+								font-size: 18px;
 				}
 }
 #bio {
@@ -175,33 +188,26 @@ p {
 				margin-top: 20px;
 				margin-bottom: 40px;
 				h3 {
-								margin-left: -40px;
+								margin-left: 0px;
 								font-size: 16px;
+
 								background-color: #e5e5e5;
-								padding-top: 12px;
-								padding-bottom: 12px;
+								padding-top: 15px;
+								padding-bottom: 15px;
 								text-align: left;
 								padding-left: 10px;
+								font-family: SourceSansPro-Bold;
+								width:312px;
+								height:52px;
 				}
 				img {
-								height: 180px;
-								width: 250px;
+								height: 156px;
+								width: 208px;
 								margin-top: 20px;
+								margin-left: -20px;
 				}
 
-				//   .pbb{
-				// margin-left:-40px;
-				//     margin-top:95px;
-				//     background-color: rgb(255,108,111);
-				//     border-color: rgb(255,108,111);
-				//     color:white;
-				//     // box-shadow: 0 3px 0 0 rgb(223,95,105);
-				//     width:100px;
-				//     height:25px;
-				//     text-align: center;
-				//     border-radius: 4px;
-				//     padding-top:3px;
-				// }
+
 				a {
 								outline: none;
 								text-decoration: none;
@@ -214,24 +220,35 @@ p {
 				width: 843px;
 				border-bottom-width: 0;
 				img {
-								width: 120px;
-								height: 120px;
+								width: 104px;
+								height: 104px;
 								border-radius: 50%;
 								margin-top: -10px;
 				}
 }
 .procedure-doc {
 				margin-top: 10px;
+				h4 {
+								margin-left: -120px;
+								margin-top: -10px;
+								font-family: SourceSansPro-Regular;
+				}
 				p {
 								padding-left: 8px;
-								margin-left: -90px;
+								margin-left: -130px;
+								font-family: SourceSansPro-Regular;
+								margin-top: -20px;
 				}
 }
+.scrolls{
+	margin-top:4px;
+	margin-left:20px;
+}
 #text {
-				width: 75px;
+				width: 105px;
 				border-color: rgb(137,216,196);
-				margin-top: 20px;
-				margin-left: -80px;
+				margin-top: 50px;
+				margin-left: -100px;
 				color: rgb(137,216,196);
 }
 .doc {
@@ -275,20 +292,22 @@ p {
 }
 .name {
 				h3 {
-								background-color: #e5e5e5;
+								background-color: #EDEDED;
 								font-size: 18px;
-								width: 415px;
+								width: 434px;
 								height: 70px;
 								padding-top: 25px;
 								font-weight: bold;
+
+								margin-left: -15px;
 								padding-left: 10px;
-								margin-left: -16px;
 								margin-top: -20px;
+								font-family: SourceSansPro-Regular;
 				}
 }
 .form {
-				background-color: #e5e5e5;
-				width: 415px;
+				background-color: #EDEDED;
+				width: 434px;
 				height: 600px;
 				margin-left: -15px;
 				margin-top: -30px;
@@ -296,18 +315,19 @@ p {
 								padding-top: 30px;
 				}
 				.form-control {
-								width: 350px;
-								height: 45px;
+								width: 365px;
+								height: 50px;
 								margin-top: 15px;
 								margin-left: 30px;
 								border-radius: 8px;
 				}
 				.textarea {
-								width: 350px;
+								width: 365px;
 								margin-top: 15px;
 								margin-left: 30px;
-
-
+								 border-radius: 8px;;
+				// border-color: Transparent;
+				border: 1px solid #ccc;
 				}
 				.dropdown {
 								margin-left: 20px;
@@ -327,6 +347,13 @@ p {
 
 								// box-shadow: 0 2px 0 0 rgb(223,95,105);
 				}
+}
+.connect {
+				border: 2px solid #D55F61;
+
+				border-radius: 5px;
+				margin-bottom: 0;
+				margin-top: 9px;
 }
 
 // .button{
@@ -348,11 +375,12 @@ a {
 }
 a:hover {
 				color: black;
-        background-color: inherit;
+				background-color: inherit;
 }
-.nav > li > a:hover, .nav > li > a:focus {
-  color: black;
-  background-color: inherit;
+.nav > li > a:hover,
+.nav > li > a:focus {
+				color: black;
+				background-color: inherit;
 }
 a:focus {
 				background-color: none;
@@ -415,7 +443,7 @@ a:focus {
 				padding-top: 20px;
 				margin-top: 15px;
 				border-top: 2px solid #e5e5e5;
-				width: 882px;
+				width: 863px;
 				span {
 								margin-left: 100px;
 				}
@@ -425,7 +453,7 @@ a:focus {
 				background-color: rgb(255,108,111);
 				border-color: rgb(255,108,111);
 				margin-left: -40px;
-				margin-top: 90px;
+				margin-top: 60px;
 }
 .btn-primary.raised.active {
 
@@ -437,10 +465,55 @@ a:focus {
 .spec {
 
 }
+.panel-body{
+	span{
+	margin-left:10px;
+	margin-right:10px;
+	text-align: center;
+	font-size: 14px;
+}
+}
 
-.autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
-.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
-.autocomplete-selected { background: #F0F0F0; }
-.autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
-.autocomplete-group { padding: 2px 5px; }
-.autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
+// .carousel-inner >.item >img,
+// .carousel-inner > .item > a > img
+// {
+//       width: 70%;
+//       margin: auto;
+//   }
+.thumbnail {
+				height: 300px;
+
+				// opacity: 0.70;
+}
+.thumbnail:hover {
+				position: absolute;
+				height: 330px;
+
+				//  width:210px;
+				//  opacity: 1.0;
+				//  border-color: black;
+}
+.autocomplete-suggestions {
+				border: 1px solid #999;
+				background: #fff;
+				overflow: auto;
+}
+.autocomplete-suggestion {
+				padding: 2px 5px;
+				white-space: nowrap;
+				overflow: hidden;
+}
+.autocomplete-selected {
+				background: #f0f0f0;
+}
+.autocomplete-suggestions strong {
+				font-weight: normal;
+				color: #39f;
+}
+.autocomplete-group {
+				padding: 2px 5px;
+}
+.autocomplete-group strong {
+				display: block;
+				border-bottom: 1px solid #000;
+}
