--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -1,5 +1,5 @@
 <!-- <div class="container"> -->
-<div class="row procedure">
+<div class="row procedure" style="margin:0px;">
 	<div class="col-lg-8 borders">
 		<div class="row doc" style="height:350px">
 			<div class="col-lg-4">
@@ -59,15 +59,16 @@
 			<p style="margin-left: 30px;">dolor ahajfnnsnsAMnkjndj janangfgbdbd</p>
 			<p style="margin-left: 30px;">jjjajjaa ahnf go away somehwhere, best care and</p>
 			<p style="margin-left: 30px;">help all over.</p>
+
 			<button type="submit" class="btn btn-default" style="margin-left:30px; ">Write a review</button>
 		</div>
 	</div>
 	<div class="col-lg-4 name">
-		<h3>
+
 			{{#each speciality}}
-				<p style="padding-left: 30px; padding-top: 10px;"> {{name}} </p>
+				<h3> {{name}} </h3>
 			{{/each}}
-		</h3>
+
 		<br>
 		<br>
 		<div class="form">
