--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -1,7 +1,7 @@
 <!-- <div class="container"> -->
-	<div class="row procedure">
+	<div class="row procedure" style="margin:0px;">
 		<div class="col-lg-8 border">
-			<img src="images/hosp3.png">
+			<img src="../images/cancer_Treatments(1).jpg">
 			<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top: 4px;margin-left:20px">
 				<nav class="navbar navbar-default">
 					<ul class="nav navbar-nav">
@@ -31,7 +31,7 @@
 						</div>
 						<div class="col-lg-5  procedure-doc">
 							<p><a href="/doctor/{{key}}">{{name}}</a></p>
-							<p>{{description}}</p>
+							<p>{{{description}}}</p>
 							<p>{{data}}</p>
 						</div>
 						<div class="col-lg-2">
@@ -65,7 +65,7 @@
 
 					    <div id="{{key}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 					      <div class="panel-body">
-									  {{name}}
+									  {{specialities.procedure}}
 					      </div>
 					    </div>
 
@@ -110,7 +110,7 @@
 						<input type="hidden" id="doctorId" name="doctorId" value="">
 					</div>
 					<div class="form-group">
-						<textarea class="textarea" name="message" rows="5" placeholder="Questions/Comments"></textarea>
+						<textarea class="textarea" name="message" rows="5" placeholder="Questions/Comments" ></textarea>
 					</div>
 					<br>
 					<input type="submit" value="Enquire" class="button" style="" />
