--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -1,83 +1,85 @@
 <!-- <div class="container"> -->
-	<div class="row procedure">
-		<div class="col-lg-8 border">
-			<img src="http://placehold.it/450x150">
-			<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top:4px;margin-left:20px">
+<div class="row procedure">
+	<div class="col-lg-8 border">
+		<img src="http://placehold.it/450x150">
+		<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top:4px;margin-left:20px">
 
-			    <nav class="navbar navbar-default">
-            <ul class="nav navbar-nav">
-						 <li><a href="#overview" >Overview</a></li>
-			 			<li><a href="#providers">Featured Providers</a></li>
-			 			<li><a href="#doctors">Specialists</a></li>
-						<li><a href="#procedures">Procedures</a></li>
-					</ul>
-			  </nav>
+			<nav class="navbar navbar-default">
+				<ul class="nav navbar-nav">
+					<li><a href="#overview">Overview</a></li>
+					<li><a href="#providers">Featured Providers</a></li>
+					<li><a href="#doctors">Specialists</a></li>
+					<li><a href="#procedures">Procedures</a></li>
+				</ul>
+			</nav>
 
 
-				<h4 id="overview"></h4>
+			<h4 id="overview"></h4>
 
-	    <div class="row">
-		  <div class="col-lg-1">
-		  </div>
-	     <div class="col-lg-10">
-				{{#each specialities}}
-	      <p>
-					{{{discription}}}
-				</p>
-		   {{/each}}
+			<div class="row">
+				<div class="col-lg-1">
+				</div>
+				<div class="col-lg-10">
+					<p> {{{speciality}}} </p>
 				</div>
 
 				<div class="col-lg-1">
 				</div>
 			</div>
 
-				<h4 id="providers"><span>Featured Providers</span></h4>
-				{{#each providers}}
-					<div class="row procedure-box">
-						<div class="col-lg-1">
-						</div>
-						<div class="col-lg-4">
-							<img src="{{cloudinaryUrl image}}">
-						</div>
-						<div class="col-lg-6">
-							<h3>{{name}}</h3>
-							<button type="button" class="btn btn-primary btn-md raised" style=" height: 30px;  outline: none;">Know More</button>
-							<!-- <a href=""><p>Know More</p></a> -->
-							<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
-						</div>
-						<div class="col-lg-1">
-						</div>
+			<h4 id="providers">
+				<span>Featured Providers</span>
+			</h4>
+			{{#each providers}}
+				<div class="row procedure-box">
+					<div class="col-lg-1">
 					</div>
-				{{/each}}
-
-				<h4 id="doctors"><span>Doctors</span></h4>
-				<div class="q">
-					<div class="p">
-				{{#each doctors}}
-					<div class="row proc" style="margin-left:0px;">
-						<div class="col-lg-1">
-						</div>
-						<div class="col-lg-3">
-							<img src="http://placehold.it/120x120">
-						</div>
-
-						<div class="col-lg-5 procedure-doc">
-							<p><a href="/doctor/{{key}}">{{name}}</a></p>
-							<p>{{description}}</p>
-							<p>{{data}}</p>
-						</div>
-
-						<div class="col-lg-2">
-							<input type="text" class="form-control" id="text" value="Verified">
-           </div>
-					 <div class="col-lg-1">
-					 </div>
+					<div class="col-lg-4">
+						<img src="{{cloudinaryUrl image}}">
 					</div>
-				{{/each}}
+					<div class="col-lg-6">
+						<h3>{{name}}</h3>
+						<button type="button" class="btn btn-primary btn-md raised" style=" height: 30px;  outline: none;">Know More</button>
+						<!-- <a href=""><p>Know More</p></a> -->
+						<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
+					</div>
+					<div class="col-lg-1">
+					</div>
+				</div>
+			{{/each}}
+
+			<h4 id="doctors">
+				<span>Doctors</span>
+			</h4>
+			<div class="q">
+				<div class="p">
+					{{#each doctors}}
+						<div class="row proc" style="margin-left:0px;">
+							<div class="col-lg-1">
+							</div>
+							<div class="col-lg-3">
+								<img src="http://placehold.it/120x120">
+							</div>
+
+							<div class="col-lg-5 procedure-doc">
+								<p><a href="/doctor/{{key}}">{{name}}</a></p>
+								<p>{{description}}</p>
+								<p>{{data}}</p>
+							</div>
+
+							<div class="col-lg-2">
+								<input type="text" class="form-control" id="text" value="Verified">
+							</div>
+							<div class="col-lg-1">
+							</div>
+						</div>
+					{{/each}}
+				</div>
 			</div>
-		</div>
-				<h4 id="procedures"><span>Procedure</span></h4>
-				<!-- <div class="row proc">
+			<h4 id="procedures">
+				<span>Procedure</span>
+			</h4>
+			<!-- <div class="row proc">
 					{{#each procedures}}
 						<div class="col-lg-4">
 							<button type="button" class="btn btn-default">{{name}}</button>
@@ -85,39 +87,39 @@
 					{{/each}}
 				</div>
 			 -->
-{{#each procedures}}
+			{{#each procedures}}
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
-    <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
-      <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="true" aria-controls="collapseOne">
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingOne">
+							<h4 class="panel-title">
+								<a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="true" aria-controls="collapseOne">
         {{name}}
         </a>
-      </h4>
-    </div>
-    <div id="{{key}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-      <div class="panel-body">
-				<div class="row">
-					<div class="col-lg-6">
+							</h4>
+						</div>
+						<div id="{{key}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+							<div class="panel-body">
+								<div class="row">
+									<div class="col-lg-6">
 
-						{{{description}}}
+										{{{description}}}
 
+									</div>
+									<div class="col-lg-3">
+										{{price}}
+									</div>
+									<div class="col-lg-3">
+										<input class="btn btn-default" type="submit" value="Submit">
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
-        <div class="col-lg-3">
-					{{price}}
-				</div>
-				<div class="col-lg-3">
-				<input class="btn btn-default" type="submit" value="Submit">
-			</div>
-			</div>
-      </div>
-    </div>
-  </div>
 
-</div>
-	{{/each}}
-	<!-- <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+				</div>
+			{{/each}}
+			<!-- <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 	  <div class="panel panel-default">
 	    <div class="panel-heading" role="tab" id="headingOne">
 	      <h4 class="panel-title">
@@ -134,12 +136,12 @@
 	  </div>
 	</div> -->
 
-</div>
-</div>
+		</div>
+	</div>
 
 
-		<div class="col-lg-4">
-			<!-- <ul class="nav nav-stacked tabs">
+	<div class="col-lg-4">
+		<!-- <ul class="nav nav-stacked tabs">
 
       {{#each specialities}}
 				{{#if active}}
@@ -150,24 +152,27 @@
 			{{/each}}
 
 			</ul> -->
-			<ul class="nav nav-stacked tabs">
+		<ul class="nav nav-stacked tabs">
 
-      {{#each specialities}}
+			{{#each specialities}}
 				{{#if active}}
-		    	<li role="presentation" class="active">
+					<li role="presentation" class="active">
 						<a href="/procedure/{{key}}" style="height: 60px;margin-left:80px;">
-							<img  src="/images/{{key}}.png" style="width:35px;height:35px;margin-left:-60px;margin-top:0px;margin-right:20px;">
+							<img src="/images/{{key}}.png" style="width:35px;height:35px;margin-left:-60px;margin-top:0px;margin-right:20px;">
 							<span>{{name}}</span>
 						</a>
 					</li>
 				{{else}}
-					<li role="presentation"><a href="/procedure/{{key}}" style="height:60px;margin-left:80px;"><img src="/images/{{key}}.png" style="width:35px;height:35px;margin-left:-60px;margin-top:0px;margin-right:20px;">{{name}}</a></li>
+					<li role="presentation">
+						<a href="/procedure/{{key}}" style="height:60px;margin-left:80px;">
+							<img src="/images/{{key}}.png" style="width:35px;height:35px;margin-left:-60px;margin-top:0px;margin-right:20px;">{{name}}</a>
+					</li>
 				{{/if}}
 			{{/each}}
 
-			</ul>
-		</div>
-
+		</ul>
 	</div>
+
+</div>
 
 <!-- </div> -->
