--- a/Gmt/templates/views/login.hbs
+++ b/Gmt/templates/views/login.hbs
@@ -17,8 +17,8 @@
 				</div>
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-default">Sign in</button>
-						<a href="/signup/" class="btn btn-default" style="margin-left:50px;">Signup</a>
+						<button type="submit" >Sign in</button>
+						<a href="/signup/" style="margin-left:50px;">Signup</a>
 					</div>
 				</div>
 			</form>
