--- a/Gmt/templates/views/profile.hbs
+++ b/Gmt/templates/views/profile.hbs
@@ -90,7 +90,9 @@
 <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="/js/pro.js"></script> -->
 				</div>
-
+              <div>
+								<p> {{Enq}} </p>
+							</div>
 
 
 				<div class="tab-pane" id="docs">
