--- a/Gmt/templates/views/login.hbs
+++ b/Gmt/templates/views/login.hbs
@@ -9,7 +9,7 @@
 				<input type="hidden" name="action" value="login">
 				<div class="form-group">
 					<label for="email" class="col-sm-2 control-label">Email</label>
-					<input type="email" name="email" class="form-control" id="Email">
+					<input type="username" name="username" class="form-control" id="Email">
 				</div>
 				<div class="form-group">
 					<label for="password" class="col-sm-2 control-label">Password</label>
