--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -11,7 +11,7 @@
 			<div class="col-lg-4">
 				{{#each doctor}}
 					<h3>{{name}}</h3>
-					<p>{{{bio}}}</p>
+					<p>{{{summary}}}</p>
 				{{/each}}
 			</div>
 			<div class="col-lg-4">
