--- a/Gmt/templates/views/providers.hbs
+++ b/Gmt/templates/views/providers.hbs
@@ -4,14 +4,14 @@
 			{{#each providers}}
 				<div class="row provider-box">
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-						<img class="provider-img" src="../images/cancer_Treatments(1).jpg" width="100%";height="auto";>
+					<img class="provider-img" width="auto" height="auto" style="margin-top: 10px; margin-bottom: 10px;" src="../images/Manipal goa.jpg">
 					</div>
 
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 provider-info">
-						<h3>{{name}}</h3>
+						<h3 style="">{{name}}</h3>
 
-							{{{description}}}
-							<button type="button" class="btn btn-default" onclick="location.href='/provider/{{key}}'">Know More</button>
+							{{{summary}}}
+							<button type="button" class="btn btn-primary btn-md raisedsss" onclick="location.href='/provider/{{key}}'">Know More</button>
 
 
 					</div>
