--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -4938,22 +4938,34 @@ button.close {
 .provider-box {
   border-bottom: 1px solid #e5e5e5;
   width: 100%;
-  margin-bottom: 20px; }
+  margin-left: 2px; }
 
 .provider-img {
   padding: 20px; }
 
-.provider-info h4 {
-  margin-left: 30px;
-  margin-top: 20px; }
+.provider-info h3 {
+  margin-top: 26px;
+  font-family: SourceSansPro-Bold;
+  font-size: 22px; }
 .provider-info p {
   text-align: justify;
   font-size: 14px;
-  margin-top: 30px;
+  margin-top: 35px;
   margin-left: 0;
-  margin-right: 20px; }
-.provider-info .btn-default {
-  margin-top: 70px; }
+  margin-right: 20px;
+  font-family: SourceSansPro-Regular;
+  font-size: 14px;
+  padding-bottom: 0px;
+  margin-bottom: 0px; }
+.provider-info .btn-primary.raisedsss {
+  margin-top: 41px;
+  background-color: #ff6c6f;
+  border-color: #ff6c6f;
+  box-shadow: 0 4px 0 0 #B24B4D;
+  margin-bottom: 10px;
+  outline: none;
+  font-family: SourceSansPro-Semibold;
+  font-size: 16px; }
 
 .q {
   height: 400px; }
@@ -4980,14 +4992,11 @@ button.close {
   font-family: SourceSansPro-Regular;
   background-color: #ededed;
   font-size: 22px;
-  margin-top: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
   box-shadow: 0 5px 0 #cac6c6; }
 .tabs a {
-  outline: none;
-  height: 75.21px; }
-.tabs span {
-  position: relative;
-  top: 11px; }
+  outline: none; }
 .tabs .active {
   background-color: #cccccc;
   margin-left: -2px; }
@@ -4996,9 +5005,17 @@ button.close {
   margin: 0; }
   .procedure .border {
     border-right: 2px solid #e5e5e5; }
-  .procedure img {
-    width: 100%;
-    height: auto; }
+
+.image {
+  width: 100%;
+  height: auto; }
+
+.para > p {
+  height: auto;
+  font-family: SourceSansPro-Regular;
+  font-size: 16px;
+  text-align: justify;
+  padding: 20px 0; }
 
 #providers, #doctors, #procedures, #speciality, #reviews {
   border-top: 2px solid #e5e5e5; }
@@ -5019,11 +5036,11 @@ button.close {
   .procedure-box h3 {
     margin-top: 0;
     width: 100%;
-    padding: 10px 0px 0px 10px;
+    padding: 20px 0 20px 10px;
     font-size: 16px;
-    background-color: #EDEDED;
+    background-color: #ededed;
     font-family: SourceSansPro-Bold;
-    height: 52px; }
+    height: auto; }
   .procedure-box img {
     height: 156px;
     width: 100%; }
@@ -5069,25 +5086,25 @@ button.close {
   background-color: #ededed;
   font-size: 18px;
   width: 100%;
-  height: 70px;
-  padding-top: 25px;
-  font-weight: bold;
-  padding-left: 33px;
+  height: auto;
+  padding: 25px 0 25px 33px;
   margin-top: 0;
-  font-family: SourceSansPro-Regular; }
+  font-family: SourceSansPro-Semibold; }
 
 .form {
   background-color: #ededed;
   width: 100%;
   height: auto;
-  margin-top: -30px; }
+  margin-top: -30px;
+  padding-bottom: 20px; }
   .form .nm {
     padding-top: 30px; }
   .form .form-group {
     display: block; }
     .form .form-group .form-control {
       width: 100%;
-      height: 50px;
+      height: auto;
+      padding: 15px 12px;
       margin-top: 15px;
       border-radius: 8px; }
     .form .form-group .textarea {
@@ -5095,17 +5112,21 @@ button.close {
       height: auto;
       margin-top: 15px;
       border-radius: 8px;
-      padding: 8px 0px 0px 8px;
+      padding: 8px 0 0 8px;
       border: 1px solid #ccc; }
-  .form .button {
-    width: 150px;
-    height: 40px;
+  .form .btn-primary.raisedss {
+    padding: 5px 6px;
+    width: 40%;
+    height: auto;
     background-color: #ff6c6f;
     color: white;
-    font-size: 20px;
+    font-size: 24px;
     border-radius: 6px;
     margin-top: 40px;
-    border-color: #ff6c6f; }
+    border-color: #ff6c6f;
+    font-family: SourceSansPro-Regular;
+    box-shadow: 0 4px 0 0 #df5f69;
+    outline: none; }
 
 .connect {
   border: 2px solid #d55f61;
@@ -5181,15 +5202,20 @@ a:focus {
     margin-left: 100px; }
 
 .btn-primary.raised {
-  box-shadow: 0 4px 0 0 #df5f69;
+  box-shadow: 0 4px 0 0 #B24B4D;
   background-color: #ff6c6f;
   border-color: #ff6c6f;
-  height: 30px;
-  margin-top: 60px; }
+  margin-top: 48px;
+  font-family: SourceSansPro-Semibold;
+  font-size: 16px; }
 
 .btn-primary.raised.active {
   outline: none;
   box-shadow: none; }
+
+.btn-primary.raiseds {
+  box-shadow: 0 4px 0 0 #df5f69;
+  border-color: #ff6c6f; }
 
 .panel-default {
   border-width: 0; }
@@ -5211,7 +5237,8 @@ a:focus {
     font-family: SourceSansPro-Regular; }
 
 .thumbnail {
-  height: 300px; }
+  height: auto;
+  width: auto; }
 
 .autocomplete-suggestions {
   border: 1px solid #999;
@@ -5252,5 +5279,104 @@ a:focus {
   font-family: SourceSansPro-Regular;
   font-size: 16px; }
 
+.jumbotron {
+  background-image: url("../images/Meet the Doctors.jpg");
+  width: 100%;
+  height: 100%; }
+
+.doc_main {
+  position: relative; }
+  .doc_main .data h2 {
+    position: absolute;
+    top: 200px;
+    left: 20px;
+    font-family: SourceSansPro-Semibold;
+    font-size: 45px; }
+  .doc_main .data .info {
+    font-size: 22px;
+    font-family: SourceSansPro-Regular;
+    position: absolute;
+    left: 20px;
+    top: 300px; }
+  .doc_main .search {
+    position: absolute;
+    background-color: #d6d2d2;
+    width: 63%;
+    padding: 15px 20px;
+    top: 360px;
+    left: 492px; }
+    .doc_main .search .label {
+      font-family: SourceSansPro-Semibold;
+      color: black;
+      padding: 15px;
+      font-size: 22px;
+      font-weight: 300; }
+
 .carousel-control.left, .carousel-control.right {
-  background-image: none; }
+  background-image: none;
+  color: #cdcaca; }
+
+.specialities {
+  background-color: #d6d2d2;
+  color: black;
+  margin-top: 0;
+  font-size: 22px;
+  font-family: SourceSansPro-Regular;
+  width: 100%;
+  padding: 15px 13px; }
+
+.doctor {
+  padding-left: 25px; }
+  .doctor .thumbnail {
+    border-bottom-width: 0;
+    margin-top: 30px; }
+    .doctor .thumbnail .doct {
+      border-radius: 50%;
+      width: 160px;
+      height: 160px;
+      margin-top: 10px; }
+
+.thumbnail > p {
+  font-family: SourceSansPro-Semibold;
+  text-align: center;
+  font-size: 16px;
+  padding-top: 15px; }
+
+.thumbnail > span {
+  font-family: SourceSansPro-Regular;
+  text-align: center;
+  font-size: 14px; }
+
+.btn-primary.raise {
+  border: 1px solid #53c8ab;
+  color: white;
+  background-color: #53c8ab;
+  border-radius: 5px;
+  width: 103.5%;
+  margin-left: -5px;
+  padding: 4px 12px;
+  font-family: SourceSansPro-Semibold;
+  font-size: 16px;
+  box-shadow: 0 3px 0 0 #317866; }
+
+.hero {
+  background: url('../images/Meet%20the%20Doctors.jpg') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  display: table;
+  width: 100%; }
+  .hero .container {
+    display: table-cell;
+    text-align: left; }
+    .hero .container h2 {
+      font-family: SourceSansPro-Semibold;
+      font-size: 45px; }
+    .hero .container p {
+      font-size: 18px; }
+    .hero .container .block {
+      background-color: #d6d2d2; }
+
+@media only screen and (min-width: 480px) and (max-width: 640px) {
+  background-color: grey; }
