--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -36,9 +36,9 @@ $icon-font-path: "../fonts/";
 }
 .provider-box {
 				border-bottom: 1px solid #e5e5e5;
-
 				width: 100%;
-				margin-bottom: 20px;
+				margin-left: 2px;
+				// margin-bottom: 20px;
 }
 .provider-img {
 				padding: 20px;
@@ -47,19 +47,32 @@ $icon-font-path: "../fonts/";
 				// height: 300px;
 }
 .provider-info {
-				h4 {
-								margin-left: 30px;
-								margin-top: 20px;
+				h3 {
+
+								margin-top: 26px;
+								font-family:SourceSansPro-Bold;
+								font-size:22px;
 				}
 				p {
 								text-align: justify;
 								font-size: 14px;
-								margin-top: 30px;
+								margin-top: 35px;
 								margin-left: 0;
 								margin-right: 20px;
+								font-family: SourceSansPro-Regular;
+								font-size:14px;
+								padding-bottom: 0px;
+								margin-bottom: 0px;
 				}
-				.btn-default {
-								margin-top: 70px;
+				.btn-primary.raisedsss {
+								margin-top: 41px;
+								background-color: #ff6c6f;
+								border-color: #ff6c6f;
+								box-shadow: 0 4px 0 0 #B24B4D;
+								margin-bottom: 10px;
+								outline: none;
+								font-family: SourceSansPro-Semibold;
+								font-size: 16px;
 				}
 }
 .q {
@@ -90,18 +103,14 @@ $icon-font-path: "../fonts/";
 								font-family: SourceSansPro-Regular;
 								background-color: rgb(237,237,237);
 								font-size: 22px;
-								margin-top: 0;
+
+								// 								margin-top: 0;
+								padding-top: 10px;
+								padding-bottom: 10px;
 								box-shadow: 0 5px 0 #cac6c6;
 				}
 				a {
 								outline: none;
-								height: 75.21px;
-
-;
-				}
-				span {
-								position: relative;
-								top: 11px;
 				}
 				.active {
 								background-color: rgb(204,204,204);
@@ -113,26 +122,18 @@ $icon-font-path: "../fonts/";
 				.border {
 								border-right: 2px solid #e5e5e5;
 				}
-				// .borders {
-				// 				border-right: 2px solid #e5e5e5;
-				// 				margin-top: -20px;
-				// 				padding-left: 35px;
-				// 				margin-left: -5px;
-				// }
-				img {
-								width: 100%;
-								height: auto;
-				}
 }
-
-// p {
-// 				margin-top: -10px;
-// 				margin-bottom: 40px;
-// 				margin-left: -20px;
-// 				text-align: justify;
-// 				font-size: 16px;
-// 				font-family: SourceSansPro-Regular;
-// }
+.image {
+				width: 100%;
+				height: auto;
+}
+.para> p {
+				height: auto;
+				font-family: SourceSansPro-Regular;
+				font-size: 16px;
+				text-align: justify;
+				padding: 20px 0;
+}
 #providers,
 #doctors,
 #procedures,
@@ -159,11 +160,11 @@ $icon-font-path: "../fonts/";
 				h3 {
 								margin-top: 0;
 								width: 100%;
-								padding: 10px 0px 0px 10px;
+								padding: 20px 0 20px 10px;
 								font-size: 16px;
-								background-color: #EDEDED;
+								background-color: #ededed;
 								font-family: SourceSansPro-Bold;
-								height: 52px;
+								height: auto;
 				}
 				img {
 								height: 156px;
@@ -200,6 +201,7 @@ $icon-font-path: "../fonts/";
 				top: 60px;
 				text-decoration: none;
 }
+
 // #text {
 // 				width: 105px;
 // 				border-color: rgb(137,216,196);
@@ -213,17 +215,21 @@ $icon-font-path: "../fonts/";
 
 				// border-bottom:2px solid #e5e5e5;
 				padding-bottom: 40px;
+
 				// margin-left: 40px;
 				// width: 843px;
 				img {
 								width: 180px;
 								height: 180px;
 								border-radius: 50%;
+
 								// margin-top: -10px;
 				}
 				h3 {
+
 								// margin-top: 50px;
 				}
+
 				// p {
 				// 				margin-left: 0;
 				// 				margin-top: 20px;
@@ -238,60 +244,61 @@ $icon-font-path: "../fonts/";
 								background-color: #ededed;
 								font-size: 18px;
 								width: 100%;
-								height: 70px;
-								padding-top: 25px;
-								font-weight: bold;
-								padding-left: 33px;
+								height: auto;
+								padding: 25px 0 25px 33px;
 								margin-top: 0;
-								font-family: SourceSansPro-Regular;
+								font-family: SourceSansPro-Semibold;
 				}
 }
 .form {
-
 				background-color: #ededed;
 				width: 100%;
 				height: auto;
-        margin-top: -30px;
+				margin-top: -30px;
+				padding-bottom: 20px;
 				.nm {
 								padding-top: 30px;
 				}
-.form-group{
-display:block;
-				.form-control {
-								width: 100%;
-								height: 50px;
-								margin-top: 15px;
-								border-radius: 8px;
-				}
-				.textarea {
-					      width: 100%;
-					      height: auto;
-								margin-top: 15px;
+				.form-group {
+								display: block;
+								.form-control {
+												width: 100%;
+												height: auto;
+												padding: 15px 12px;
+												margin-top: 15px;
+												border-radius: 8px;
+								}
+								.textarea {
+												width: 100%;
+												height: auto;
+												margin-top: 15px;
+												border-radius: 8px;
+												padding: 8px 0 0 8px;
+												border: 1px solid #ccc;
+								}
 
-								border-radius: 8px;
-							padding: 8px 0px 0px 8px;
-								border: 1px solid #ccc;
+								// .dropdown {
+								// 				margin-left: 20px;
+								// 				width: 100px;
+								// 				margin-left: 30px;
+								// }
 				}
-				// .dropdown {
-				// 				margin-left: 20px;
-				// 				width: 100px;
-				// 				margin-left: 30px;
-				// }
-					}
-				.button {
-
-								width: 150px;
-								height: 40px;
+				.btn-primary.raisedss {
+								padding: 5px 6px;
+								width: 40%;
+								height: auto;
 								background-color: rgb(255,108,111);
 								color: white;
-								font-size: 20px;
+								font-size: 24px;
 								border-radius: 6px;
 								margin-top: 40px;
 								border-color: rgb(255,108,111);
+								font-family: SourceSansPro-Regular;
+								box-shadow: 0 4px 0 0 rgb(223,95,105);
+								outline: none;
 
 								// box-shadow: 0 2px 0 0 rgb(223,95,105);
 				}
-
 }
 .connect {
 				border: 2px solid #d55f61;
@@ -299,7 +306,6 @@ display:block;
 				margin-bottom: 0;
 				margin-top: 9px;
 }
-
 .post_img {
 				height: auto;
 				width: 50%;
@@ -386,16 +392,23 @@ a:focus {
 				}
 }
 .btn-primary.raised {
-				box-shadow: 0 4px 0 0 rgb(223,95,105);
+				box-shadow: 0 4px 0 0 #B24B4D;
 				background-color: #ff6c6f;
 				border-color: rgb(255,108,111);
-				height: 30px;
-				margin-top: 60px;
+				margin-top: 48px;
+				font-family: SourceSansPro-Semibold;
+				font-size: 16px;
 }
 .btn-primary.raised.active {
 				outline: none;
 				box-shadow: none;
 }
+.btn-primary.raiseds {
+				box-shadow: 0 4px 0 0 rgb(223,95,105);
+				border-color: rgb(255,108,111);
+}
+
+
 .spec {
 
 }
@@ -428,26 +441,10 @@ a:focus {
 								font-family: SourceSansPro-Regular;
 				}
 }
-
-// .carousel-inner >.item >img,
-// .carousel-inner > .item > a > img
-// {
-//       width: 70%;
-//       margin: auto;
-//   }
 .thumbnail {
-				height: 300px;
-
-				// opacity: 0.70;
+				height: auto;
+				width: auto;
 }
-// .thumbnail:hover {
-// 				position: absolute;
-// 				height: 330px;
-//
-// 				//  width:210px;
-// 				//  opacity: 1.0;
-// 				//  border-color: black;
-// }
 .autocomplete-suggestions {
 				border: 1px solid #999;
 				background: #fff;
@@ -474,8 +471,6 @@ a:focus {
 }
 .form {
 				 ::-webkit-input-placeholder {
-
-								// color: transparent;
 								font-family: SourceSansPro-Regular;
 								font-size: 16px;
 				}
@@ -497,19 +492,144 @@ a:focus {
 								font-size: 16px;
 				}
 }
+.jumbotron {
+				background-image: url("../images/Meet the Doctors.jpg");
+				width: 100%;
+				height: 100%;
+}
+
+//doctors main picture!!!!!!!!!!!!!!!!!!!!
+.doc_main {
+				position: relative;
+				.data {
+								h2 {
+												position: absolute;
+												top: 200px;
+												left: 20px;
+												font-family: SourceSansPro-Semibold;
+												font-size: 45px;
+								}
+								.info {
+												font-size: 22px;
+												font-family: SourceSansPro-Regular;
+												position: absolute;
+												left: 20px;
+												top: 300px;
+
+												// p {
+												// 				top: 300px;
+												//
+												// }
+												// #spec {
+												// 				top: 330px;
+												//
+												// }
+								}
+				}
+				.search {
+								 position: absolute;
+								background-color: rgb(214, 210, 210);
+								// z-index: 999px;
+								width: 63%;
+								padding: 15px 20px;
+								top: 360px;
+								left: 492px;
+								.label {
+												font-family: SourceSansPro-Semibold;
+												color: black;
+												padding: 15px;
+												font-size: 22px;
+												font-weight: 300;
+												// position: relative;
+												// top: 2px;
+								}
+				}
+}
 .carousel-control.left,
 .carousel-control.right {
 				background-image: none;
+				color: #cdcaca;
+}
 
-				}
-// .carousel-control .glyphicon-chevron-left,
-// .carousel-control .glyphicon-chevron-right,
-// .carousel-control .icon-prev,
-// .carousel-control .icon-next {
-// 				font-size: 50px;
-// 				height: 30px;
-// 				margin-top: -15px;
-//
-// 				// width: 10px;
-// 				background-image: none;
+// .mtd {
+// 				position: relative;
+// 				width: 100%;
+// 				/* for IE 6 */
 // }
+.specialities {
+				background-color: rgb(214, 210, 210);
+				color: black;
+				margin-top: 0;
+				font-size: 22px;
+				font-family: SourceSansPro-Regular;
+				width: 100%;
+				padding: 15px 13px;
+}
+.doctor {
+				padding-left: 25px;
+				.thumbnail {
+								border-bottom-width: 0;
+								margin-top: 30px;
+								.doct {
+												border-radius: 50%;
+												width: 160px;
+												height: 160px;
+												margin-top: 10px;
+								}
+				}
+}
+.thumbnail>p {
+				font-family: SourceSansPro-Semibold;
+				text-align: center;
+				font-size: 16px;
+				padding-top: 15px;
+}
+.thumbnail>span {
+				font-family: SourceSansPro-Regular;
+				text-align: center;
+				font-size: 14px;
+}
+.btn-primary.raise {
+				border: 1px solid rgb(83, 200, 171);
+				color: white;
+				background-color: rgb(83, 200, 171);
+				border-radius: 5px;
+				width: 103.5%;
+				margin-left: -5px;
+				padding: 4px 12px;
+				font-family: SourceSansPro-Semibold;
+				font-size: 16px;
+				box-shadow: 0 3px 0 0 #317866;
+}
+
+
+.hero {
+    background: url('../images/Meet%20the%20Doctors.jpg') no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    display: table;
+    width: 100%;
+    .container {
+        h2 {
+            // font-weight: bold;
+						font-family: SourceSansPro-Semibold;
+						font-size: 45px;
+        }
+        p{
+         font-size: 18px;
+        }
+        display: table-cell;
+        text-align: left;
+        //        vertical-align: middle;
+//        height: 447px;
+        .block{
+         background-color: rgb(214, 210, 210);
+        }
+    }
+}
+
+	@media only screen and (min-width:480px) and (max-width: 640px)  {
+	background-color: grey;
+}
