--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -1,63 +1,63 @@
 <!-- <div class="container"> -->
 <div class="row procedure"> <!-- row starts-->
-	<div class="col-lg-8 border no-padding">
-		<img src="../images/cancer_Treatments(1).jpg" >
+	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
+		<img src="../images/cancer_Treatments(1).jpg" class="image" >
 		<div class="scrolls" data-spy="scroll" data-target="#navbar-example">
 			<nav class="navbar navbar-default">
 				<ul class="nav navbar-nav row" style="padding-top: 8px;">
-					<li class="col-lg-1">&nbsp;</li>
-					<li class="col-lg-2" ><a href="#overview">Overview</a></li>
-					<li class="col-lg-4" style="margin-left: 15px;"><a href="#providers">Featured Providers</a></li>
-					<li class="col-lg-2"><a href="#doctors" style="margin-left:-28px;">Specialists</a></li>
-					<li class="col-lg-2"><a href="#procedures" style="margin-left: -11px;">Procedures</a></li>
+					<li class="col-lg-1 col-sm-1 col-xs-1 col-md-1">&nbsp;</li>
+					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2" ><a href="#overview">Overview</a></li>
+					<li class="col-lg-4 col-sm-4 col-xs-4 col-md-4" style="margin-left: 15px;"><a href="#providers">Featured Providers</a></li>
+					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2"><a href="#doctors" style="margin-left:-28px;">Specialists</a></li>
+					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2"><a href="#procedures" style="margin-left: -11px;">Procedures</a></li>
 				</ul>
 			</nav>
 			<h4 id="overview"></h4>
 			<div class="row">
-				<div class="col-lg-1">
+				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
-				<div class="col-lg-10">
-					<p> {{{speciality}}}</p>
+				<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 para">
+					 {{{speciality}}}
 				</div>
-				<div class="col-lg-1">
+				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
 			</div>
 			<h4 id="providers">
 				<div class="row">
-					<div class="col-lg-1">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 					</div>
-		<div class="col-lg-3">
+		<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
 				<span >Featured Providers</span>
 			</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
 				</div>
 			</div>
 			</h4>
 			{{#each providers}}
 				<div class="row procedure-box ">
-					<div class="col-lg-1">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 					</div>
-					<div class="col-lg-3">
+					<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
 						<img src="" >
 					</div>
-					<div class="col-lg-5">
+					<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5">
 						<h3>{{name}}</h3>
 						<button type="button" class="btn btn-primary btn-md raised">Know More</button>
 						<!-- <a href=""><p>Know More</p></a> -->
 						<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
 					</div>
-					<div class="col-lg-2">
+					<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
 					</div>
 				</div>
 			{{/each}}
 			<h4 id="doctors">
 				<div class="row">
-					<div class="col-lg-1">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 					</div>
-		<div class="col-lg-3">
+		<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
 				<span>Doctors</span>
 			</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
 				</div>
 			</div>
 			</h4>
@@ -65,20 +65,20 @@
 				<div class="p">
 					{{#each doctors}}
 						<div class="row proc">
-							<div class="col-lg-1">
+							<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 							</div>
-							<div class="col-lg-2">
+							<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
 								<img src="http://placehold.it/104x104">
 							</div>
-							<div class="col-lg-5 procedure-doc">
+							<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5 procedure-doc">
 								<h4><a href="/doctor/{{key}}">{{name}}</a></h4>
-								{{{description}}}
+								{{{summary}}}
 							</div>
-							<div class="col-lg-2">
+							<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
 								<!-- <input type="text" class="form-control" id="text" value="View Profile"> -->
 								<a href="" id="link" style="">View Profile</a>
 							</div>
-							<div class="col-lg-1">
+							<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 							</div>
 						</div>
 					{{/each}}
@@ -86,19 +86,19 @@
 			</div>
 			<h4 id="procedures">
 				<div class="row">
-					<div class="col-lg-1">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 					</div>
-		<div class="col-lg-3">
+		<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
 				<span>Procedures</span>
 			</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
 				</div>
 			</div>
 			</h4>
 			<div class="row">
-				<div class="col-lg-1">
+				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
-				<div class="col-lg-10" style="border:1px solid #e5e5e5;border-radius:4px;">
+				<div class="col-lg-10" style="border:1px solid #e5e5e5;border-radius:4px;margin-top:20px">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 				{{#each procedures}}
 
@@ -107,14 +107,14 @@
 								<h4 class="panel-title">
 									<a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="false" aria-controls="collapseOne">
 										<div class="row accordion" >
-											<div class="col-lg-8 title">
+											<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 title">
 												{{name}}
 												<!-- <span class="fa fa-plus-square-o"></span> -->
 											</div>
-											<div class="col-lg-2 price">
+											<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 price">
 												{{price}}
 											</div>
-											<div class="col-lg-2">
+											<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
 												<input class="btn btn-default" type="submit" value="Enquiry" style="background-color:#FF6C6F;color:white">
 											</div>
 										</div>
@@ -131,43 +131,42 @@
 				{{/each}}
 				</div>
 			</div>
-				<div class="col-lg-1">
+				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
 				</div>
 			</div>
 		</div>
 
-	<div class="col-lg-4 no-padding"> <!--col 4 starts-->
+	<div class="col-lg-4 col-sm-4 col-xs-4 col-md-4 no-padding"> <!--col 4 starts-->
 		<ul class="nav nav-stacked tabs">
 			{{#each specialities}}
 				{{#if active}}
 					<li role="presentation" class="active">
 						<a href="/procedure/{{key}}" >
 					<div class="row">
-						<div class="col-lg-1">
+						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 						</div>
-						<div class="col-lg-2">
-							<img src="/images/{{key}}.png" style="width:27px;height:28.1px;position:relative;top:8px">
+						<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+							<img src="/images/{{key}}.png" >
+<!-- style="width:27px;height:28.1px;position:relative;top:8px" -->
+						</div>
+						<div class="col-lg-9"><span>{{name}}</span></div>
 
-						</div>
-						<div class="col-lg-7"><span>{{name}}</span></div>
-						<div class="col-lg-1">
-						</div>
 						</div>
 						</a>
 					</li>
 				{{else}}
-					<li role="presentation">
+					<li role="presentation" >
 						<a href="/procedure/{{key}}" >
 							<div class="row">
-								<div class="col-lg-1">
+								<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 								</div>
-								<div class="col-lg-2">
-							<img src="/images/{{key}}.png" style="width:27px;height:28.1px;position:relative;top:8px">
+								<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+							<img src="/images/{{key}}.png" width="60%" height="auto" >
 						</div>
-						<div class="col-lg-7"><span>{{name}}</span></div>
-						<div class="col-lg-1">
-						</div>
+						<div class="col-lg-9"><span>{{name}}</span></div>
+
+
 						</div>
 						</a>
 					</li>
